# papis

./: .codacy.yml  .codespell-ignore  .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.md  Dockerfile  HACKING.md  LICENSE.txt  Lesson_learnt.md  Makefile  PACKAGING.md  README.md  README.rst  ROADMAP.md  appveyor.yml  arxiv.py  bibtex.py  cli.py  config.mk  config.py  dblp.py  defaults.py  exceptions.py  flake.nix  id.py  json.py  library.py  logging.py  papis-cli  plugin.py  pubmed.py  pyproject.toml  release.Dockerfile  (+7 more)
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/agents/: rust-development.agent.md
.github/workflows/: codeql.yml  container-build.yml  main.yml  nix-flake-update-pr.yml  nix-flake.yml  windows.yml
commands/: add.py  cache.py  citations.py  default.py  explore.py  export.py  external.py  git.py  rename.py  rm.py
contrib/: papis.desktop  python-papis.scm
contrib/shell_completion/: Makefile
database/: whoosh.py
doc/: Makefile  sphinx.mk
doc/source/: README.rst  api.rst  bibtex.rst  citations.rst  classes.rst  commands.rst  conf.py  configuration.rst  database_structure.rst  default-settings.rst  default_settings.rst  developer_reference.rst  document.rst  editors.rst  faq.rst  git.rst  gui.rst  hooks.rst  importing.rst  index.rst  info_file.rst  install.rst  library_structure.rst  papis_id.rst  plugins.rst  queries.rst  quick_guide.rst  quick_start.rst  scihub.rst  scripting.rst  shell_completion.rst  testing.rst  tutorial.rst  web-application.rst
doc/vhs/: edit.tape  shortcuts.tape
downloaders/: __init__.py  acm.py  acs.py  annualreviews.py  base.py  fallback.py  frontiersin.py  hal.py  projecteuclid.py  sciencedirect.py  scitationaip.py  tandfonline.py  thesesfr.py  worldscientific.py
examples/scripts/: LTWA.json  os  papis-abbrev  papis-abbrev.py  papis-check  papis-check.py  papis-ga  papis-ga.py  papis-hubation  papis-mail  papis-mail.sh  papis-scihub  papis-tags  papis-tags.py  papis-update-scripts  papis-zotero  papis-zotero-serve  papis-zotero-sql  papis.config  urllib.request
openspec/: config.yaml
papis/: #crossref.py#  .#crossref.py  __init__.py  __main__.py  ads.py  api.py  arxiv.py  base.py  bibtex.py  cache.py  citations.py  cli.py  config.py  crossref.py  csl.py  database.py  dblp.py  defaults.py  dissemin.py  docmatcher.py  doctor.py  document.py  doi.py  exceptions.py  filetype.py  format.py  fzf.py  git.py  hayagriva.py  hg.py  hooks.py  id.py  importer.py  isbn.py  isbn_standalone.py  isbnplus.py  json.py  libgen.py  library.py  logging.py  (+17 more)
papis/commands/: .update.py.swp  __init__.py  add.py  addto.py  bibtex.py  browse.py  cache.py  check.py  citations.py  config.py  default.py  doctor.py  edit.py  exec.py  explore.py  export.py  external.py  git.py  gui.py  hg.py  importer.py  init.py  list.py  merge.py  mv.py  no_command.py  open.py  rename.py  rm.py  run.py  serve.py  server.py  sync.py  tag.py  test.py  update.py
papis/data/: mime.types
papis/database/: __init__.py  base.py  cache.py  sqlite.py  whoosh.py  xapian.py
papis/downloaders/: __init__.py  acl.py  acm.py  acs.py  annualreviews.py  aps.py  arxiv.py  base.py  citeseerx.py  crossref.py  fallback.py  frontiersin.py  get.py  hal.py  ieee.py  iopscience.py  libgen.py  lingbuzz.py  projecteuclid.py  sciencedirect.py  scitationaip.py  springer.py  tandfonline.py  thesesfr.py  usenix.py  utils.py  worldscientific.py
papis/explorers/: __init__.py  arxiv.py  bibtex.py  citations.py  crossref.py  dblp.py  isbn.py  isbn_standalone.py  json.py  library.py  yaml.py
papis/exporters/: __init__.py  bibtex.py  csl.py  csv.py  json.py  typst.py  yaml.py
papis/format/: __init__.py  jinja.py  python.py
papis/gui/: __init__.py  dmenu.py  rofi.py
papis/importer/: __init__.py  arxiv.py  bibtex.py  crossref.py  dblp.py  doi.py  ieee.py  isbn.py  isbn_standalone.py  library.py  openreview.py  pubmed.py  yaml.py  zenodo.py
papis/pick/: __init__.py  fzf.py  prompt_toolkit.py
papis/server/: __init__.py  api.py  app.py  exceptions.py  git.py  models.py  security.py
papis/tests/: __init__.py  cli.py  test_add.py  test_addremove.py  test_addto.py  test_bibtex.py  test_browse.py  test_check.py  test_config.py  test_edit.py  test_export.py  test_list.py  test_mv.py  test_rename.py  test_rm.py  test_run.py  test_tk.py  test_update.py  test_utils.py
papis/tk/: __init__.py  list.py  main.py  prompt.py
papis/tui/: __init__.py  app.py  diff.py  picker.py  utils.py
papis/web/: ace.py  add.py  citations.py  djvujs.py  docform.py  document.py  docview.py  epubjs.py  header.py  html.py  info.py  latex.py  libraries.py  navbar.py  notes.py  paths.py  pdfjs.py  search.py  static.py  (+2 more)
python/: .gitignore  .readthedocs.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL  ROADMAP.md  pyproject.toml
rust/: .gitignore  Cargo.toml  rust-toolchain.toml
rust/src/: bib.rs  cli.rs  db.rs  main.rs  model.rs  storage.rs
scripts/: bash_completion.sh  papis-zotero
tests/: __init__.py  cli.py  conftest.py  filetype.py  run.sh  test_arxiv.py  test_bibtex.py  test_config.py  test_config_empty.py  test_crossref.py  test_csl.py  test_dblp.py  test_deps.py  test_docmatcher.py  test_doctor.py  test_document.py  test_doi.py  test_exporter_csv.py  test_format.py  test_git.py  test_haragriva.py  test_hayagriva.py  test_importer.py  test_isbn.py  test_paths.py  test_pubmed.py  test_utils.py  test_zenodo.py  testlib.py
tools/: changelog.sh  ci-install.sh  ci-lint.sh  ci-mypy-install-types  ci-run-lint.sh  ci-run-test.sh  ci-run-tests.sh  create-docker-image.py  dir-locals.el  extract-changelog.py  make-wheels.sh  run-integration-test.sh  test-all-py-versions-in-docker.sh  update-pypi.sh
tui/: __init__.py  picker.py
web/: .gitignore  Makefile  README.md  djvujs.py  docform.py  document.py  docview.py  index.html  latex.py  libraries.py  navbar.py  normalize.scss  package.json  packages.dhall  pdfjs.py  shell.nix  spago.dhall  style.scss  template.html  web.py
(+487 files in other folders)
