[package]
name = "papis-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
biblatex = "0.11.0"
clap = { version = "4.6.0", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[build]
target-dir = "target"
